<resources>
    <string name="app_name">Nutri&amp;Bio</string>
    <string name="generar_QR">Generar codigo QR</string>
    <string name="guardar_QR">Guardar codigo QR</string>
    <string name="ingreso_receta">Ingrese su receta</string>
    <string name="ingreso_datos">Ingrese sus datos</string>
    <string name="ingreso_consumo">Nombre producto o fecha</string>
    <string name="ingreso_producto">Nombre o codigo</string>
    <string name="app_id">1582079135395959</string>
    <string name="buscar">Buscar</string>
    <string name="resultado">Resultado</string>
    <string name="productos">Productos</string>
    <string name="peso">Peso ideal</string>
    <string name="pesoinfo">Peso en Kgs</string>
    <string name="kg">Kgs</string>
    <string name="alturainfo">Altura en Cms</string>
    <string name="cms">Cms</string>
    <string name="receta">Titulo:</string>
    <string name="ingreso_titulo">Tu receta</string>
    <string name="ingreso_consejo">Ingresa titulo o categoria</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_simple_login">With Simple Login Button</string>
    <string name="action_custom_login">With Custom Login Button</string>

</resources>
