<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="100">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingreso_datos"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_weight="8"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pesoinfo"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="10dp"
            android:hint="@string/kg"
            android:id="@+id/ETpeso"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_weight="8"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/alturainfo"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="10dp"
            android:hint="@string/cms"
            android:id="@+id/ETaltura"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="82"
        android:weightSum="100"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/BTindice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:layout_weight="10"
            />

        <TextView
            android:id="@+id/TVbmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:ems="10">

        </TextView>

    </LinearLayout>

</LinearLayout>