<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="4"
        android:visibility="visible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/BTpeso"
            android:text="@string/peso"
            android:layout_weight="2"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/productos"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/BTproductos" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="5"
        android:visibility="visible">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/ETbuscarconsumo"
            android:hint="@string/ingreso_consumo"
            android:layout_weight="4"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/buscar"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/BTbuscarconsumo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="80"
        android:visibility="visible">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ListViewDos">

        </ListView>

    </LinearLayout>

</LinearLayout>